# mcp-cbr-rates

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  glama.json  pyproject.toml  server.json
src/mcp_cbr_rates/: __init__.py  cache.py  client.py  currency_codes.py  errors.py  schemas.py  server.py  tools.py
tests/: conftest.py  test_cache.py  test_cli.py  test_client.py  test_get_rate.py  test_history_rates.py  test_inflation.py  test_key_rate.py  test_server.py  test_statistics.py
tests/fixtures/: inflation.html  soap_keyrate.xml  xml_daily_2024-04-25.xml  xml_dynamic_usd.xml  xml_valfull.xml
