[project]
name = "atomno-mcp-cbr-rates"
version = "0.1.1"
description = "MCP server for Central Bank of Russia (CBR) data: currency rates, key rate, inflation, macro stats."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "atomno-labs", email = "hello@atomno.ru" },
]
keywords = ["mcp", "model-context-protocol", "cbr", "ru", "fintech", "currency", "rates", "atomno"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "defusedxml>=0.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "respx>=0.21",
    "ruff>=0.4",
]

[project.scripts]
mcp-cbr-rates = "mcp_cbr_rates.server:main"

[project.urls]
Homepage = "https://github.com/atomno-labs/mcp-cbr-rates"
Documentation = "https://github.com/atomno-labs/mcp-cbr-rates#readme"
Repository = "https://github.com/atomno-labs/mcp-cbr-rates"
Issues = "https://github.com/atomno-labs/mcp-cbr-rates/issues"
Changelog = "https://github.com/atomno-labs/mcp-cbr-rates/releases"
"MCP Catalog" = "https://glama.ai/mcp/servers/atomno-labs/mcp-cbr-rates"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_cbr_rates"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-v --strict-markers"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/mcp_cbr_rates"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "ASYNC"]
ignore = ["E501"]
